apps/monitoring/scrutiny/master/deployment.yaml
# Reference:
# https://github.com/keycloak/keycloak/discussions/12594
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrutiny
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: scrutiny
          image: ghcr.io/analogj/scrutiny:v0.9.4-web@sha256:a566f3c2e804d2534fa8cb75f813c75a4a356a57186239ecf96eab851517ab77
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 400Mi
            limits:
              cpu: 300m
              memory: 500Mi
          volumeMounts:
            - name: config
              mountPath: /opt/scrutiny/config
          # readinessProbe:
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 30
          #   httpGet:
          #     path: /realms/sequoia
          #     port: 8080
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: scrutiny-config
