apps/monitoring/scrutiny/master/ingress-collector-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scrutiny-collector-api
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`scrutiny-api.gibbs.tk`) && PathPrefix(`/api/`)"
      kind: Rule
      services:
        - name: scrutiny
          port: http
      middlewares:
        - name: basic-auth
          namespace: scrutiny
  tls:
    secretName: wildcard-gibbs-tk
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
spec:
  basicAuth:
    secret: api-basic-auth
