apps/monitoring/scrutiny/master/ingress-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scrutiny-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`scrutiny.gibbs.tk`)"
      kind: Rule
      services:
        - name: scrutiny
          port: http
      middlewares:
        - name: forward-auth
          namespace: scrutiny
  tls:
    secretName: wildcard-gibbs-tk
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny
  labels:
    monitor: scrutiny
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`scrutiny-db.gibbs.tk`)"
      kind: Rule
      services:
        - name: influxdb-influxdb2
          port: 80
  tls:
    secretName: wildcard-gibbs-tk
